--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,6 @@ repositories {
     mavenCentral()
 }
 
-configurations {
-    asciidoctorExt
-}
-
 dependencies {
     // web
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -35,8 +31,7 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
 
     // rest doc
-    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+   testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -47,36 +42,34 @@ ext {
 }
 
 test {
+    useJUnitPlatform()
     outputs.dir snippetsDir
 }
 
 tasks.named('test') {
-    outputs.dir snippetsDir
     useJUnitPlatform()
 }
 
+
+asciidoctor.doFirst {
+    delete file('src/main/resources/static/docs')
+}
+
 asciidoctor {
-    inputs.dir snippetsDir
-    configurations 'asciidoctorExt'
     dependsOn test
+    inputs.dir snippetsDir
 }
 
 bootJar {
     dependsOn asciidoctor
-    from("${asciidoctor.outputDir}/html5") {
-        into 'static/docs'
+    copy {
+        from "${asciidoctor.outputDir}"
+        into 'BOOT-INF/classes/static/docs'
     }
 }
 
 task copyDocument(type: Copy) {
     dependsOn asciidoctor
-    doFirst {
-        delete file('src/main/resources/static/docs')
-    }
     from file("build/docs/asciidoc")
     into file("src/main/resources/static/docs")
-}
-
-build {
-    dependsOn copyDocument
 }
